File folders created

--- a/about/index.html
+++ b/about/index.html
@@ -50,127 +50,17 @@
 
     <header>Unplugged</header>
 
-
-    <ul class="menu-list">
+<section class="top-section">
+    <h2 class="menu-items">Menu </h2>
         <li><a href="#home">Home</a></li>
         <li><a href="#faq">FAQ</a></li>
         <li><a href="#about">About</a></li>
     </ul>
+</section>
 
-
-    <div class="container">
-        <h1>Homepage</h1>
-
-
-        <h2>Retreat from the desk, return refreshed.</h2>
-
-        Want to join the next retreat?
-
-        Find out when we are holding our next retreat and how your company or team can sign up!
-
-        Find out more
-
-        name@email.com
-
-        Download Itinerary
-
-        Have the work week you always dreamed of — without the bad wifi.
-
-        Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
-
-        12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
-
-        Private chef team providing on demand meals - just like your team kitchen.
-
-        5 outdoor obstacle courses, including private beach ½ mile from bungalow.
-
-        Retreat facilitator to manage your day to day activities so you all get a chance to reset.
-
-        Dedicated computer room for times that you must wifi.
-
-        Be a better team in 5 days, like this one.
-
-        LaCrue Bottling Co.
-        October 2018
-
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur.
-
-        Contact
-
-        555-555-5555
-        hello@unplugged.com
-
-        Social
-
-        Copyright 202X | Unplugged
-
-
-        FAQ Page
-
-        Frequently Asked Questions
-
-
-        How do I get to the Unplugged retreat?
-
-
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Quis ipsum suspendisse ultrices gravida.
-
-        What kind of team is right for the Unplugged retreat?
-
-
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Quis ipsum suspendisse ultrices gravida.
-
-        What size teams can you accommodate?
-
-
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua.
-
-
-        Is there really no wifi available?
-
-
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Quis ipsum suspendisse ultrices gravida.
-
-
-        About Page
-
-        Our Mission - we want to make you the team you always wanted to be.
-
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-        facilisis.
-
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-        facilisis.
-
-
-        Contact us, because you all need this.
-
-        General Information
-
-        333 Main St, Lake Geneva, WI 53147
-        555-555-5555
-        hello@unplugged.com
-
-        Chat with a Facilitator
-        555-555-5556
-        facilitator@unplugged.com
-
-
-
-        </header>
-        <p>Unplugged</p>
-        <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="../about/index.html"></script>
+        <script src="./index.html"></script>
+        <script src="../faq/"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <script>
@@ -178,6 +68,28 @@
             ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
         </script>
         <script src="https://www.google-analytics.com/analytics.js" async></script>
+
+        About Page
+
+Our Mission - we want to make you the team you always wanted to be.
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+
+
+Contact us, because you all need this.
+
+General Information
+
+333 Main St, Lake Geneva, WI 53147
+555-555-5555
+hello@unplugged.com
+
+Chat with a Facilitator
+555-555-5556
+facilitator@unplugged.com
+
 </body>
 
 </html>
