Added HTML sections

--- a/about/index.html
+++ b/about/index.html
@@ -16,8 +16,8 @@
     <link rel="apple-touch-icon" href="icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\normalize.css">
-    <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\main.css">
+    <link rel="stylesheet" href="C:\Users\tyler\Unplugged\css\normalize.css">
+    <link rel="stylesheet" href="C:\Users\tyler\Unplugged\css\main.css">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,11 +46,26 @@
 
 <body>
 
-    <!-- Add your site or application content here -->
+    <header>
+        Unplugged
+<div class="content-wrapper">
 
-    <header>Unplugged</header>
+    <div class="header-divider"></div>
 
-<section class="top-section">
+    <nav>
+        <h2 class="menu-items">Menu </h2>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#faq">FAQ</a></li>
+        <li><a href="#about">About</a></li>
+    </ul>
+
+    </nav>
+</div>
+</header>
+
+<main></main>
+
+<section class="hero">
     <h2 class="menu-items">Menu </h2>
         <li><a href="#home">Home</a></li>
         <li><a href="#faq">FAQ</a></li>
