--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Unplugged</title>
-  <meta name="description" content="">
+  <title>Unplugged Retreat</title>
+  <meta name="description" content="relaxing-get-away">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="">
@@ -16,8 +16,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\normalize.css">
-  <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\main.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,25 +31,25 @@
 
 <style>
   body {
-      max-width: 960px;
-      font-size: 16px;
-      display: flex;
+    max-width: 960px;
+    font-size: 16px;
+    display: flex;
 
 
   }
 
   header {
-      font-size: 4em;
-      align-items: flex-start;
+    font-size: 4em;
+    align-items: flex-start;
   }
 </style>
 
 <body>
 
   <!-- Add your site or application content here -->
-  <script src="../unplugged-homepg/about/index.html"></script>
-  <script src="../unplugged-homepg/faq/index.html"></script>
-  <script src="./js/plugins.js"></script>
+  <script src="about/index.html"></script>
+  <script src="faq/index.html"></script>
+  <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
@@ -57,67 +57,61 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
+  <main>
+    <header>
+      Unplugged
+      <div class="content-wrapper">
 
-  <header>Unplugged</header>
-  <article>
-  <nav>
-<h2 class="menu.items">Menu</h2>
-  <ul>
-<li><a href="./faq/index.html">FAQ</a></li>
-<li><a href="about/index.html">About</a></li>
-</ul>
-</nav>
-</article>
+        <figure>
+          <a href="#"><img src="img\unpluggedlogo.png" alt="unplugged logo"></a>
+        </figure>
+        <div class="header-divider"></div>
+
+        <nav>
+          <ul>
+            <li><a href="about/index.html" target="_blank">About</a></li>
+            <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          </ul>
+        </nav>
+
+      </div>
+
+    </header>
 
 
-<section>
-<h1 class="retreat">Retreat from the desk, return refreshed.</h1>
-</section>
+    <section>
+      <section class="hero-area">
 
-<article class="top-content">
-<h3 class="container">Want to join the next retreat?</h3>
+        <div class="content-wrapper">
+          <h1>Retreat from the desk, returned refreshed.</h1>
+        </div>
+      </section>
 
-<p>Find out when we are holding our next retreat and how your company or team can sign up!<br>
+      <aside>
 
-Find out more<br>
+        <div class="content-wrapper">
 
-name@email.com<br>
+          <div class="form-description">
+            <h3>Want to join the next retreat?</h3>
+            <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
 
-Download Itinerary<br>
-</p>
-</article>
+          </div>
 
-<article class="middle-content">
-  <h4>Have the work week you always dreamed of <br> without the bad wifi.</h4>
+          <div class="form">
+            <h3>Find out more</h3>
+            </div>
+            <div class="button">Download
+            <input type="text" name="name" value="email address">
+            <input type="button" value="Download Itinerary">
+          </div>
 
-<p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+      </aside>
 
-<p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+  </main>
 
-<p>Private chef team providing on demand meals - just like your team kitchen.</p>
+  <footer>
 
-<p>5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
-
-Retreat facilitator to manage your day to day activities so you all get a chance to reset.
-
-Dedicated computer room for times that you must wifi.
-
-Be a better team in 5 days, like this one.
-
-LaCrue Bottling Co.
-October 2018
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-
-Contact
-
-555-555-5555
-hello@unplugged.com
-
-Social
-
-Copyright 202X | Unplugged
-
+  </footer>
 
 
 
