Dividers in place

--- a/about/index.html
+++ b/about/index.html
@@ -1,109 +1,150 @@
 <!doctype html>
-<html class="no-js" lang="en-US">
+<html class="Home" lang="en-US">
 
 <head>
-    <meta charset="utf-8">
-    <title>Unplugged</title>
-    <meta name="Unplugged" content="retreat">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <title>Unplugged Retreat</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
 
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="C:\Users\tyler\Unplugged\css\normalize.css">
-    <link rel="stylesheet" href="C:\Users\tyler\Unplugged\css\main.css">
+  <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\normalize.css">
+  <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\main.css">
 
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Open+Sans&family=Poppins:wght@300&display=swap"
-        rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Open+Sans&family=Poppins:wght@300&display=swap"
+    rel="stylesheet">
 
-    <meta name="theme-color" content="#fafafa">
+  <meta name="theme-color" content="#fafafa">
 </head>
 
 <style>
-    body {
-        max-width: 960px;
-        font-size: 16px;
-        display: flex;
+  body {
+    max-width: 960px;
+    font-size: 16px;
+    display: flex;
 
 
-    }
+  }
 
-    header {
-        font-size: 4em;
-        align-items: flex-start;
-    }
+  header {
+    font-size: 4em;
+    align-items: flex-start;
+  }
 </style>
 
 <body>
 
-    <header>
-        Unplugged
-<div class="content-wrapper">
+  <!-- Add your site or application content here -->
+  <script src="../unplugged-homepg/about/index.html"></script>
+  <script src="../unplugged-homepg/faq/index.html"></script>
+  <script src="./js/plugins.js"></script>
 
+  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>
+
+  <header>Unplugged
+
+  </header>
+  <div class="content-wrapper">
+    <figure>
+      <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo">
+    </figure>
     <div class="header-divider"></div>
-
     <nav>
-        <h2 class="menu-items">Menu </h2>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#faq">FAQ</a></li>
-        <li><a href="#about">About</a></li>
-    </ul>
-
+      <ul>
+        <li><a href="C:\Users\tyler\Unplugged\about\index.html" target="_blank">About</a></li>
+        <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+      </ul>
     </nav>
-</div>
-</header>
+  </div>
+  </header>>
 
-<main></main>
+  <main>
+    <section class="hero-area">
+      <div class="content-wrapper">
 
-<section class="hero">
-    <h2 class="menu-items">Menu </h2>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#faq">FAQ</a></li>
-        <li><a href="#about">About</a></li>
-    </ul>
-</section>
+        <h1>Retreat from the desk, returned refreshed.</h1>
 
-        <script src="../about/index.html"></script>
-        <script src="./index.html"></script>
-        <script src="../faq/"></script>
+      </div>
+    </section>
+    <aside>
 
-        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-        <script>
-            window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-            ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-        </script>
-        <script src="https://www.google-analytics.com/analytics.js" async></script>
+      <div class="content-wrapper">
 
-        About Page
+        <div class="form-description">
+          <h3>Want to join the next retreat?</h3>
 
-Our Mission - we want to make you the team you always wanted to be.
+          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        </div>
+        <div class="form">
+          <h3>Find out more</h3>
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+          <input type="text" name="name" value="email address">
+          <input type="button" value="Download Itinerary">
+        </div>
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+        <div class="content-wrapper">
+          
+          <h4>Have the work week you always dreamed of — without the bad wifi.</h4>
+
+          <p> Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+
+          <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+
+          <p> Private chef team providing on demand meals - just like your team kitchen.</p>
+
+          <p> 5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
+
+          <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+
+          <p>Dedicated computer room for times that you must wifi.</p>
+
+          <p>Be a better team in 5 days, like this one.</p>
+
+        </div>
+    </aside>
+
+  </main>
+
+  </div>
+
+  <footer>
+    <h2>Contact</h2>
+
+    <div>
+      <div>
+        <div>
+          <div>
+            <p><a href="https://www.facebook.com/profile.php?id=100088825444355" target="_blank" rel="noopener"></a>
+            </p>
+            <address>555-555-5555</address>
+          </div>
+        </div>
+      </div>
+  </footer>
+  </article>
 
 
-Contact us, because you all need this.
 
-General Information
 
-333 Main St, Lake Geneva, WI 53147
-555-555-5555
-hello@unplugged.com
 
-Chat with a Facilitator
-555-555-5556
-facilitator@unplugged.com
+
 
 </body>
 
