--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html class="no-js" lang="en-US">
+<html class="Home" lang="en-US">
 
 <head>
   <meta charset="utf-8">
   <title>Unplugged Retreat</title>
-  <meta name="description" content="relaxing-get-away">
+  <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="">
@@ -16,8 +16,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\normalize.css">
+  <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\main.css">
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,9 +47,9 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <script src="about/index.html"></script>
-  <script src="faq/index.html"></script>
-  <script src="js/main.js"></script>
+  <script src="../unplugged-homepg/about/index.html"></script>
+  <script src="../unplugged-homepg/faq/index.html"></script>
+  <script src="./js/plugins.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
@@ -57,61 +57,69 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
+
+  <header>Unplugged
+
+  </header>
+  <div class="content-wrapper">
+    <figure>
+      <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo">
+    </figure>
+    <div class="header-divider"></div>
+    <nav>
+      <ul>
+        <li><a href="C:\Users\tyler\Unplugged\about\index.html" target="_blank">About</a></li>
+        <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+      </ul>
+    </nav>
+  </div>
+  </header>>
+
   <main>
-    <header>
-      Unplugged
+    <section class="hero-area">
       <div class="content-wrapper">
 
-        <figure>
-          <a href="#"><img src="img\unpluggedlogo.png" alt="unplugged logo"></a>
-        </figure>
-        <div class="header-divider"></div>
-
-        <nav>
-          <ul>
-            <li><a href="about/index.html" target="_blank">About</a></li>
-            <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          </ul>
-        </nav>
+        <h1>Retreat from the desk, returned refreshed.</h1>
 
       </div>
+    </section>
+    <aside>
 
-    </header>
+      <div class="content-wrapper">
 
+        <div class="form-description">
+          <h3>Want to join the next retreat?</h3>
 
-    <section>
-      <section class="hero-area">
-
-        <div class="content-wrapper">
-          <h1>Retreat from the desk, returned refreshed.</h1>
+          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
         </div>
-      </section>
+        <div class="form">
+          <h3>Find out more</h3>
 
-      <aside>
-
-        <div class="content-wrapper">
-
-          <div class="form-description">
-            <h3>Want to join the next retreat?</h3>
-            <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-
-          </div>
-
-          <div class="form">
-            <h3>Find out more</h3>
-            </div>
-            <div class="button">Download
-            <input type="text" name="name" value="email address">
-            <input type="button" value="Download Itinerary">
-          </div>
-
-      </aside>
+          <input type="text" name="name" value="email address">
+          <input type="button" value="Download Itinerary">
+        </div>
+    </aside>
 
   </main>
 
-  <footer>
+  </div>
 
+  <footer>
+    <h2>Contact</h2>
+
+    <div>
+      <div>
+        <div>
+          <div>
+            <p><a href="https://www.facebook.com/profile.php?id=100088825444355" target="_blank" rel="noopener"></a>
+            </p>
+            <address>555-555-5555</address>
+          </div>
+        </div>
+      </div>
   </footer>
+  </article>
+
 
 
 
