--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="en-US">
+<html class="Home" lang="en-US">
 
 <head>
   <meta charset="utf-8">
-  <title>Unplugged</title>
+  <title>Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -31,16 +31,16 @@
 
 <style>
   body {
-      max-width: 960px;
-      font-size: 16px;
-      display: flex;
+    max-width: 960px;
+    font-size: 16px;
+    display: flex;
 
 
   }
 
   header {
-      font-size: 4em;
-      align-items: flex-start;
+    font-size: 4em;
+    align-items: flex-start;
   }
 </style>
 
@@ -58,65 +58,67 @@
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
 
-  <header>Unplugged</header>
-  <article>
-  <nav>
-<h2 class="menu.items">Menu</h2>
-  <ul>
-<li><a href="./faq/index.html">FAQ</a></li>
-<li><a href="about/index.html">About</a></li>
-</ul>
-</nav>
-</article>
+  <header>Unplugged
 
+  </header>
+  <div class="content-wrapper">
+    <figure>
+      <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo">
+    </figure>
+    <div class="header-divider"></div>
+    <nav>
+      <ul>
+        <li><a href="C:\Users\tyler\Unplugged\about\index.html" target="_blank">About</a></li>
+        <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+      </ul>
+    </nav>
+  </div>
+  </header>>
 
-<section>
-<h1 class="retreat">Retreat from the desk, return refreshed.</h1>
-</section>
+  <main>
+    <section class="hero-area">
+      <div class="content-wrapper">
 
-<article class="top-content">
-<h3 class="container">Want to join the next retreat?</h3>
+        <h1>Retreat from the desk, returned refreshed.</h1>
 
-<p>Find out when we are holding our next retreat and how your company or team can sign up!<br>
+      </div>
+    </section>
+    <aside>
 
-Find out more<br>
+      <div class="content-wrapper">
 
-name@email.com<br>
+        <div class="form-description">
+          <h3>Want to join the next retreat?</h3>
 
-Download Itinerary<br>
-</p>
-</article>
+          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        </div>
+        <div class="form">
+          <h3>Find out more</h3>
 
-<article class="middle-content">
-  <h4>Have the work week you always dreamed of <br> without the bad wifi.</h4>
+          <input type="text" name="name" value="email address">
+          <input type="button" value="Download Itinerary">
+        </div>
+    </aside>
 
-<p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+  </main>
 
-<p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+  </div>
 
-<p>Private chef team providing on demand meals - just like your team kitchen.</p>
+  <footer>
+    <h2>Contact</h2>
 
-<p>5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
-
-Retreat facilitator to manage your day to day activities so you all get a chance to reset.
-
-Dedicated computer room for times that you must wifi.
-
-Be a better team in 5 days, like this one.
-
-LaCrue Bottling Co.
-October 2018
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-
-Contact
-
-555-555-5555
-hello@unplugged.com
-
-Social
-
-Copyright 202X | Unplugged
+    <div>
+      <div>
+        <div>
+          <div>
+            <p><a href="https://www.facebook.com/profile.php?id=100088825444355" target="_blank" rel="noopener"></a>
+            </p>
+            <address>555-555-5555</address>
+          </div>
+        </div>
+      </div>
+  </footer>
+  </article>
 
 
 
