All the text done

--- a/faq/index.html
+++ b/faq/index.html
@@ -129,46 +129,74 @@
                     <input type="text" name="name" value="email address">
                     <input type="button" value="Download Itinerary">
                 </div>
-
-                <div class="content-wrapper">
-
-                    <h4>Have the work week you always dreamed of — without the bad wifi.</h4>
-
-                    <p> Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-
-                    <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-
-                    <p> Private chef team providing on demand meals - just like your team kitchen.</p>
-
-                    <p> 5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
-
-                    <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-
-                    <p>Dedicated computer room for times that you must wifi.</p>
-
-                    <p>Be a better team in 5 days, like this one.</p>
-
-                </div>
+            </div>
         </aside>
 
+        <section class="features">
+            <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+
+            <div class="content-wrapper">
+                <article>
+                    <p class="fontawesome-icon"></p>
+                    <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva,
+                        Wisconsin.</p>
+
+
+                    <p class="fontawesome-icon"></p>
+                    <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms,
+                        and 4
+                        breakout rooms.</p>
+
+                    <p class="fontawesome-icon"></p>
+                    <p class="features-item-description">Private chef team providing on demand meals - just like your
+                        team kitchen.</p>
+
+                    <p class="fontawesome-icon"></p>
+                    <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from
+                        bungalow.</p>
+
+                    <p class="fontawesome-icon"></p>
+                    <p class="features-item-description">Retreat facilitator to manage your day to day activities so you
+                        all get a chance to reset.</p>
+
+                    <p class="fontawesome-icon"></p>
+                    <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+
+                    <p class="fontawesome-icon"></p>
+                    <p class="features-item-description">Be a better team in 5 days, like this one.</p>
+
+                </article>
+
+            </div>
+
+            <section class="reviews">
+                <div class="content-wrapper">
+                    <h3>Lacrue Bottling Co.<br> October 2018</h3>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+
+                </div>
+            </section>
     </main>
 
     </div>
 
     <footer>
-        <h2>Contact</h2>
+        <h4>Contact</h4>
 
-        <div>
-            <div>
-                <div>
-                    <div>
-                        <p><a href="https://www.facebook.com/profile.php?id=100088825444355" target="_blank"
-                                rel="noopener"></a>
-                        </p>
-                        <address>555-555-5555</address>
-                    </div>
-                </div>
-            </div>
+        <div class="contact">
+            <address>555-555-5555</address>
+        </div>
+        <div class="social"><a href="https://www.facebook.com/profile.php?id=100088825444355" target="_blank"
+                rel="noopener"></a></div>
+        <div class="social-icons"></div>
+        <div class="copyright"></div>
+
+        </div>
+        </div>
     </footer>
     </article>
 
