About us content added

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <link rel="apple-touch-icon" href="icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\normalize.css">
-    <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\main.css">
+    <link rel="stylesheet" href="C:\Users\tyler\unplugged\css\normalize.css">
+    <link rel="stylesheet" href="C:\Users\tyler\unplugged\css\main.css">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -64,22 +64,20 @@
     body {
         max-width: 960px;
         font-size: 16px;
-        display: flex;
 
 
     }
 
     header {
         font-size: 4em;
-        align-items: flex-start;
     }
 </style>
 
 <body>
 
     <!-- Add your site or application content here -->
-    <script src="../unplugged-homepg/about/index.html"></script>
-    <script src="../unplugged-homepg/faq/index.html"></script>
+    <script src="../Unplugged/about/index.html"></script>
+    <script src="../Unplugged/faq/index.html"></script>
     <script src="./js/plugins.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
@@ -104,7 +102,7 @@
             </ul>
         </nav>
     </div>
-    </header>>
+    </header>
 
     <main>
         <section class="hero-area">
@@ -189,11 +187,12 @@
 
         <div class="contact">
             <address>555-555-5555</address>
+            <a href="hello@unplugged.com" type="email">hello@unplugged.com</a>
         </div>
         <div class="social"><a href="https://www.facebook.com/profile.php?id=100088825444355" target="_blank"
-                rel="noopener"></a></div>
+                rel="noopener"></a>Facebook</div>
         <div class="social-icons"></div>
-        <div class="copyright"></div>
+        <div class="copyright">Copyright 202X | Unplugged</div>
 
         </div>
         </div>
