--- a/about/index.html
+++ b/about/index.html
@@ -47,8 +47,8 @@
     <link rel="apple-touch-icon" href="icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\normalize.css">
-    <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\main.css">
+    <link rel="stylesheet" href="C:\Users\tyler\unplugged\css\normalize.css">
+    <link rel="stylesheet" href="C:\Users\tyler\unplugged\css\main.css">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -64,22 +64,20 @@
     body {
         max-width: 960px;
         font-size: 16px;
-        display: flex;
 
 
     }
 
     header {
         font-size: 4em;
-        align-items: flex-start;
     }
 </style>
 
 <body>
 
     <!-- Add your site or application content here -->
-    <script src="../unplugged-homepg/about/index.html"></script>
-    <script src="../unplugged-homepg/faq/index.html"></script>
+    <script src="../unplugged/about/index.html"></script>
+    <script src="../unplugged/faq/index.html"></script>
     <script src="./js/plugins.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
@@ -93,9 +91,7 @@
 
     </header>
     <div class="content-wrapper">
-        <figure>
-            <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo">
-        </figure>
+
         <div class="header-divider"></div>
         <nav>
             <ul>
@@ -104,101 +100,56 @@
             </ul>
         </nav>
     </div>
-    </header>>
+    </header>
 
     <main>
-        <section class="hero-area">
+        <section class="mission">
+            <div class="mission-content">
+                <h2> Our Mission - we want to make you the team you always wanted to be.</h2>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan
+                lacus vel facilisis.</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan
+                lacus vel facilisis.</p>
             <div class="content-wrapper">
-
-                <h1>Retreat from the desk, returned refreshed.</h1>
-
             </div>
         </section>
-        <aside>
 
-            <div class="content-wrapper">
+        <figure class="map"></figure>
 
-                <div class="form-description">
-                    <h3>Want to join the next retreat?</h3>
+        <section class="contact">
+            <h2>Contact us, because you all need this.</h2>
+            <h4>General Information</h4>
+            <address>333 Main St, Lake Geneva, WI 53147
+                555-555-5555
+                hello@unplugged.com
+            </address>
 
-                    <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-                </div>
-                <div class="form">
-                    <h3>Find out more</h3>
+            <h4>Chat with a Facilitator</h4>
 
-                    <input type="text" name="name" value="email address">
-                    <input type="button" value="Download Itinerary">
-                </div>
+            <address>555-555-5556
+                facilitator@unplugged.com
+            </address>
+        </section>
+
+        <footer>
+            <h4>Contact</h4>
+
+            <div class="contact">
+                <address>555-555-5555</address>
+                <a href="hello@unplugged.com" type="email">hello@unplugged.com</a>
             </div>
-        </aside>
-
-        <section class="features">
-            <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
-
-            <div class="content-wrapper">
-                <article>
-                    <p class="fontawesome-icon"></p>
-                    <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva,
-                        Wisconsin.</p>
-
-
-                    <p class="fontawesome-icon"></p>
-                    <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms,
-                        and 4
-                        breakout rooms.</p>
-
-                    <p class="fontawesome-icon"></p>
-                    <p class="features-item-description">Private chef team providing on demand meals - just like your
-                        team kitchen.</p>
-
-                    <p class="fontawesome-icon"></p>
-                    <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from
-                        bungalow.</p>
-
-                    <p class="fontawesome-icon"></p>
-                    <p class="features-item-description">Retreat facilitator to manage your day to day activities so you
-                        all get a chance to reset.</p>
-
-                    <p class="fontawesome-icon"></p>
-                    <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
-
-                    <p class="fontawesome-icon"></p>
-                    <p class="features-item-description">Be a better team in 5 days, like this one.</p>
-
-                </article>
+            <div class="social"><a href="https://www.facebook.com/profile.php?id=100088825444355" target="_blank"
+                    rel="noopener"></a>Facebook</div>
+            <div class="social-icons"></div>
+            <div class="copyright">Copyright 202X | Unplugged</div>
 
             </div>
-
-            <section class="reviews">
-                <div class="content-wrapper">
-                    <h3>Lacrue Bottling Co.<br> October 2018</h3>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-
-                </div>
-            </section>
-    </main>
-
-    </div>
-
-    <footer>
-        <h4>Contact</h4>
-
-        <div class="contact">
-            <address>555-555-5555</address>
-        </div>
-        <div class="social"><a href="https://www.facebook.com/profile.php?id=100088825444355" target="_blank"
-                rel="noopener"></a></div>
-        <div class="social-icons"></div>
-        <div class="copyright"></div>
-
-        </div>
-        </div>
-    </footer>
-    </article>
+            </div>
+        </footer>
 
 
 
