--- a/about/index.html
+++ b/about/index.html
@@ -1,35 +1,4 @@
 <!doctype html>
-<html class="no-js" lang="en-US">
-
-<head>
-    <meta charset="utf-8">
-    <title>Unplugged</title>
-    <meta name="Unplugged" content="retreat">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
-
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
-
-    <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\normalize.css">
-    <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\main.css">
-
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Open+Sans&family=Poppins:wght@300&display=swap"
-        rel="stylesheet">
-
-    <meta name="theme-color" content="#fafafa">
-</head>
-
-<!doctype html>
 <html class="Home" lang="en-US">
 
 <head>
@@ -60,119 +29,141 @@
     <meta name="theme-color" content="#fafafa">
 </head>
 
-<style>
-    body {
-        max-width: 960px;
-        font-size: 16px;
-
-
-    }
-
-    header {
-        font-size: 4em;
-    }
-</style>
-
 <body>
+    <!--[if lte IE 9]>
+      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+    <![endif]-->
 
     <!-- Add your site or application content here -->
-    <script src="../unplugged/about/index.html"></script>
-    <script src="../unplugged/faq/index.html"></script>
-    <script src="./js/plugins.js"></script>
-
-    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-    <script>
-        window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-        ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-    </script>
-    <script src="https://www.google-analytics.com/analytics.js" async></script>
-
-    <header>Unplugged
-
-    </header>
-    <div class="content-wrapper">
-
-        <div class="header-divider"></div>
-        <nav>
-            <ul>
-                <li><a href="C:\Users\tyler\Unplugged\about\index.html" target="_blank">About</a></li>
-                <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-            </ul>
-        </nav>
-    </div>
+    <header>
+        <div class="content-wrapper">
+            <a href="#">
+                <img src="" alt="unplugged logo">
+            </a>
+            <div class="header-divider"></div>
+            <nav>
+                <ul>
+                    <li><a href="../faq/index.html">FAQ</a></li>
+                    <li><a href="index.html">About</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
+
         <section class="mission">
-            <div class="mission-content">
-                <h2> Our Mission - we want to make you the team you always wanted to be.</h2>
-            </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan
-                lacus vel facilisis.</p>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan
-                lacus vel facilisis.</p>
             <div class="content-wrapper">
+                <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+                <div class="mission-content">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
+                        maecenas accumsan lacus vel facilisis.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
+                        maecenas accumsan lacus vel facilisis.
+                    </p>
+                </div>
+            </div>
+            <!-- mission content wrapper ends -->
+        </section>
+        <!-- contact-info -->
+
+        <section class="map">
+            <figure>
+            </figure>
+        </section>
+
+        <section class="contact-section">
+            <div class="content-wrapper">
+                <h2>Contact us, because you all need this.</h2>
+                <div class="contact-content">
+                    <div>
+                        <h4>General Information</h4>
+                        <address>
+                            <p>
+                                333 Main St, Lake Geneva, WI 53147<br>
+                                555-555-5555<br>
+                                hello@unplugged.com
+                            </p>
+                        </address>
+                    </div>
+                    <div>
+                        <h4>Chat with a Facilitator</h4>
+                        <address>
+                            <p>
+                                555-555-5556<br>
+                                facilitator@unplugged.com
+                            </p>
+                        </address>
+                    </div>
+                    <!-- contact-content div ends -->
+                </div>
+                <!-- contact content wrapper ends -->
             </div>
         </section>
 
-        <figure class="map"></figure>
+    </main>
+    <!-- main wrapper -->
 
-        <section class="contact">
-            <h2>Contact us, because you all need this.</h2>
-            <h4>General Information</h4>
-            <address>333 Main St, Lake Geneva, WI 53147
-                555-555-5555
-                hello@unplugged.com
-            </address>
-
-            <h4>Chat with a Facilitator</h4>
-
-            <address>555-555-5556
-                facilitator@unplugged.com
-            </address>
-        </section>
-
-        <footer>
-            <h4>Contact</h4>
-
-            <div class="contact">
-                <address>555-555-5555</address>
-                <a href="hello@unplugged.com" type="email">hello@unplugged.com</a>
+    <footer>
+        <div class="content-wrapper">
+            <div class="footer-content">
+                <div class="contact">
+                    <h4>Contact</h4>
+                    <address>
+                        <p>
+                            555-555-5555<br>
+                            hello@unplugged.com
+                        </p>
+                    </address>
+                </div>
+                <div class="social">
+                    <h4>Social</h4>
+                    <div class="social-icons">
+                        <p>
+                            <a href="https://www.facebook.com/Skillcrush/" target="_blank"></a>
+                        </p>
+                        <p>
+                            <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+                        </p>
+                        <p>
+                            <a href="https://www.instagram.com/skillcrush/" target="_blank"></a>
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="social"><a href="https://www.facebook.com/profile.php?id=100088825444355" target="_blank"
-                    rel="noopener"></a>Facebook</div>
-            <div class="social-icons"></div>
-            <div class="copyright">Copyright 202X | Unplugged</div>
+            <!-- footer content ends -->
+        </div>
+        <!--footer content-wrapper ends-->
+        <div class="copyright">
+            <p>Copyright 2018 | Unplugged</p>
+        </div>
+    </footer>
 
-            </div>
-            </div>
-        </footer>
+    <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script>
+        window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')
+    </script>
+    <script src="../js/plugins.js"></script>
+    <script src="../js/main.js"></script>
 
-
-
-
-
-
-
-</body>
-
-</html>
-
-
-</header>
-<script src="js/vendor/modernizr-3.11.2.min.js"></script>
-<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
-
-<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-<script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-</script>
-<script src="https://www.google-analytics.com/analytics.js" async></script>
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+        window.ga = function () {
+            ga.q.push(arguments)
+        };
+        ga.q = [];
+        ga.l = +new Date;
+        ga('create', 'UA-XXXXX-Y', 'auto');
+        ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 
 </html>
