--- a/about/index.html
+++ b/about/index.html
@@ -19,20 +19,16 @@
     <link rel="stylesheet" href="C:\Users\tyler\unplugged\css\normalize.css">
     <link rel="stylesheet" href="C:\Users\tyler\unplugged\css\main.css">
 
-
+    <!-- Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Open+Sans&family=Poppins:wght@300&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@300&display=swap"
         rel="stylesheet">
 
     <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
-    <!--[if lte IE 9]>
-      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-    <![endif]-->
 
     <!-- Add your site or application content here -->
     <header>
@@ -72,10 +68,14 @@
         </section>
         <!-- contact-info -->
 
-        <section class="map">
+        <div class="map-container">
             <figure>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d26420.869872706266!2d-88.01328241824498!3d34.13076516682519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1677013354797!5m2!1sen!2sus"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </figure>
-        </section>
+        </div>
 
         <section class="contact-section">
             <div class="content-wrapper">
