--- a/about/index.html
+++ b/about/index.html
@@ -70,10 +70,29 @@
 
         <div class="map-container">
             <figure>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d26420.869872706266!2d-88.01328241824498!3d34.13076516682519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1677013354797!5m2!1sen!2sus"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <style>
+                    .embed-container {
+                        position: relative;
+                        padding-bottom: 56.25%;
+                        height: 0;
+                        overflow: hidden;
+                        max-width: 100%;
+                    }
+
+                    .embed-container iframe,
+                    .embed-container object,
+                    .embed-container embed {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                    }
+                </style>
+                <div class='embed-container'>
+                    <iframe src='https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d26420.869872706266!2d-88.01328241824498!3d34.13076516682519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1677013354797!5m2!1sen!2sus'
+                        width='600' height='450' style='border:0;' allowfullscreen='' loading='lazy'
+                        referrerpolicy='no-referrer-when-downgrade'></iframe></div>
             </figure>
         </div>
 
