--- a/faq/index.html
+++ b/faq/index.html
@@ -19,11 +19,10 @@
     <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\normalize.css">
     <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\main.css">
 
-
+    <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Open+Sans&family=Poppins:wght@300&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@300&display=swap"
         rel="stylesheet">
 
     <meta name="theme-color" content="#fafafa">
