FAQ section fixed

--- a/faq/index.html
+++ b/faq/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html class="no-js" lang="en-US">
+<html class="Home" lang="en-US">
 
 <head>
     <meta charset="utf-8">
-    <title>Unplugged</title>
-    <meta name="Unplugged" content="retreat">
+    <title>Unplugged Retreat</title>
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:title" content="">
@@ -16,10 +16,10 @@
     <link rel="apple-touch-icon" href="icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\normalize.css">
-    <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\main.css">
+    <link rel="stylesheet" href="C:\Users\tyler\unplugged\css\normalize.css">
+    <link rel="stylesheet" href="C:\Users\tyler\unplugged\css\main.css">
 
-    <!--Google Fonts-->
+    <!-- Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@300&display=swap"
@@ -30,16 +30,15 @@
 </head>
 
 <body>
-    <!-- Add your site or application content here -->
     <header>
         <div class="content-wrapper">
             <a href="#">
-                <img src="" alt="unplugged logo">
+                <img src="../unplugged-retreat-features.jpg" alt="unplugged logo">
             </a>
             <div class="header-divider"></div>
             <nav>
                 <ul>
-                    <li><a href="index.html">FAQ</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="../about/index.html">About</a></li>
                 </ul>
             </nav>
@@ -108,26 +107,6 @@
         </div>
     </footer>
 
-    <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script>
-        window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')
-    </script>
-    <script src="../js/plugins.js"></script>
-    <script src="../js/main.js"></script>
-
-    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-    <script>
-        window.ga = function () {
-            ga.q.push(arguments)
-        };
-        ga.q = [];
-        ga.l = +new Date;
-        ga('create', 'UA-XXXXX-Y', 'auto');
-        ga('send', 'pageview')
-    </script>
-    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 
 </html>
