--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <nav>
             </div>
             <ul>
-                <li><a href="faq/index.html">FAQ</a></li>
+                <li><a href="C:\Users\tyler\Unplugged\faq\index.html">FAQ</a></li>
 
                 <li><a href="about/index.html">About</a></li>
             </ul>
