--- a/about/index.html
+++ b/about/index.html
@@ -39,7 +39,7 @@
             <div class="header-divider"></div>
             <nav>
                 <ul>
-                    <li><a href="../faq/index.html">FAQ</a></li>
+                    <li><a href="C:\Users\tyler\Unplugged\faq\index.html">FAQ</a></li>
                     <li><a href="index.html">About</a></li>
                 </ul>
             </nav>
